@@ -1230,6 +1230,8 @@ namespace RCT1
         RIVER_RAFT = 103,
         MINIATURE_RAILWAY_AMERICAN_TENDER = 104,
         MINIATURE_RAILWAY_AMERICAN_LOCOMOTIVE = 105,
+        AIR_POWERED_VERTICAL_COASTER_TRAIN_FRONT = 106,
+        AIR_POWERED_VERTICAL_COASTER_TRAIN_CAR = 107,
     };
 
     enum
